--- a/requirements.txt
+++ b/requirements.txt
@@ -29,6 +29,7 @@ idna==3.4
 isort==5.12.0
 kombu==5.3.2
 lazy-object-proxy==1.9.0
+llama-cpp-python==0.1.83
 makefun==1.15.1
 Mako==1.2.4
 MarkupSafe==2.1.3
